# beatmate

./: .gitattributes  .gitignore  CHANTIERS-AVANCES-macos.md  CMakeLists.txt  DEPENDANCES-macos.md  README.md  SETUP-GITHUB-macos.md  STEMS-macos.md  build_mac.sh  package_dmg.sh
.github/workflows/: build-mac.yml  build-stems.yml
cmake/: CompilerFlags.cmake  Dependencies.cmake  Packaging.cmake
resources/: THIRD-PARTY-NOTICES.txt  beatmate.qrc
resources/themes/: dark.qss  light.qss
resources/web/: licence.html
resources/website/: checkout.html  features.html  index.html  pricing.html  success.html
resources/website/api/: .env.example  requirements.txt  server.py
resources/website/css/: style.css
src/: main.cpp
src/app/: Application.cpp  Application.h  Config.cpp  Config.h  NativeSplash.cpp  NativeSplash.h  ServiceLocator.cpp  ServiceLocator.h
src/core/analysis/: AIBeatgridService.cpp  AIBeatgridService.h  AdvancedBeatRefinementService.cpp  AdvancedBeatRefinementService.h  AdvancedColouredWaveformService.cpp  AdvancedColouredWaveformService.h  AdvancedStructuralAnalysisService.cpp  AdvancedStructuralAnalysisService.h  AudioAnalysisPipeline.cpp  AudioAnalysisPipeline.h  AutoAnalysisService.cpp  AutoAnalysisService.h  AutoTempoDetectionService.cpp  AutoTempoDetectionService.h  BPMDetector.cpp  BPMDetector.h  BatchAnalyzer.cpp  BatchAnalyzer.h  BeatEngine.cpp  BeatEngine.h  BeatGridEditor.cpp  BeatGridEditor.h  BeatGridGenerator.cpp  BeatGridGenerator.h  BeatgridOverlayRenderer.cpp  BeatgridOverlayRenderer.h  BeatmatchingService.cpp  BeatmatchingService.h  CamelotUtil.h  ChromaprintAnalyzer.cpp  ChromaprintAnalyzer.h  CollectionRadar.cpp  CollectionRadar.h  DownbeatDetectionService.cpp  DownbeatDetectionService.h  EbuR128AnalyzerService.cpp  EbuR128AnalyzerService.h  EnergyAnalyzer.cpp  EnergyAnalyzer.h  EnergyDetector.cpp  (+61 more)
src/core/audio/: AudioBuffer.cpp  AudioBuffer.h  AudioClip.cpp  AudioClip.h  AudioConversion.cpp  AudioConversion.h  AudioDeviceManager.cpp  AudioDeviceManager.h  AudioEngine.cpp  AudioEngine.h  AudioFileReader.cpp  AudioFileReader.h  AudioFileWriter.cpp  AudioFileWriter.h  AudioFormat.cpp  AudioFormat.h  AudioMixer.cpp  AudioMixer.h  AudioPlayer.cpp  AudioPlayer.h  AudioPreview.cpp  AudioPreview.h  AudioTrack.cpp  AudioTrack.h  SampleRateConverter.cpp  SampleRateConverter.h  StreamingPlayer.cpp  StreamingPlayer.h
src/core/automation/: AutomationCurve.cpp  AutomationCurve.h  AutomationLane.cpp  AutomationLane.h  AutomationPlayback.cpp  AutomationPlayback.h  AutomationRecorder.cpp  AutomationRecorder.h  TempoAutomation.cpp  TempoAutomation.h
src/core/cue/: AutoHotcueDetectionService.cpp  AutoHotcueDetectionService.h  CuePointGenerator.cpp  CuePointGenerator.h  CuePointParser.cpp  CuePointParser.h  HotCueManager.cpp  HotCueManager.h  IntelligentCueCreator.cpp  IntelligentCueCreator.h  MemoryCueManager.cpp  MemoryCueManager.h  UltraPreciseHotcueService.cpp  UltraPreciseHotcueService.h
src/core/dsp/: BitCrusherProcessor.cpp  BitCrusherProcessor.h  ChorusProcessor.cpp  ChorusProcessor.h  CompressorProcessor.cpp  CompressorProcessor.h  DSPProcessor.cpp  DSPProcessor.h  DelayProcessor.cpp  DelayProcessor.h  DistortionProcessor.cpp  DistortionProcessor.h  EQProcessor.cpp  EQProcessor.h  FFTProcessor.cpp  FFTProcessor.h  FilterProcessor.cpp  FilterProcessor.h  FlangerProcessor.cpp  FlangerProcessor.h  GainProcessor.cpp  GainProcessor.h  LimiterProcessor.cpp  LimiterProcessor.h  NoiseGate.cpp  NoiseGate.h  PanProcessor.cpp  PanProcessor.h  PhaserProcessor.cpp  PhaserProcessor.h  ReverbProcessor.cpp  ReverbProcessor.h  SIMDProcessor.cpp  SIMDProcessor.h  VinylSimulator.cpp  VinylSimulator.h
src/core/effects/: AutoDuck.cpp  AutoDuck.h  BeatJumpEngine.cpp  BeatJumpEngine.h  CrossfadeEngine.cpp  CrossfadeEngine.h  DJEffectsLibrary.cpp  DJEffectsLibrary.h  EffectPresetService.cpp  EffectPresetService.h  EffectSlot.cpp  EffectSlot.h  EffectsChain.cpp  EffectsChain.h  LoopEngine.cpp  LoopEngine.h  ScratchEngine.cpp  ScratchEngine.h  SendReturnBus.cpp  SendReturnBus.h  TransitionEngine.cpp  TransitionEngine.h
src/core/midi/: ControllerProfiles.cpp  ControllerProfiles.h  MIDIController.cpp  MIDIController.h  MIDIEngine.cpp  MIDIEngine.h  MIDILearn.cpp  MIDILearn.h  MIDIMapping.cpp  MIDIMapping.h  MetaKnobService.cpp  MetaKnobService.h
src/core/mixing/: AutoGain.cpp  AutoGain.h  BeatSync.cpp  BeatSync.h  EQMatcher.cpp  EQMatcher.h  HarmonicMixer.cpp  HarmonicMixer.h  KeyLock.cpp  KeyLock.h
src/core/recording/: AutoMixRecorderService.cpp  AutoMixRecorderService.h  ExportEngine.cpp  ExportEngine.h  LiveSetRecorder.cpp  LiveSetRecorder.h  MixRecorder.cpp  MixRecorder.h  SetTimecodeService.cpp  SetTimecodeService.h  TimecodeTracker.cpp  TimecodeTracker.h
src/core/sampler/: DrumMachine.cpp  DrumMachine.h  SampleBank.cpp  SampleBank.h  SamplePad.cpp  SamplePad.h  SamplerEngine.cpp  SamplerEngine.h
src/core/stems/: DemucsStemService.cpp  DemucsStemService.h  DrumIsolator.cpp  DrumIsolator.h  SelectionStemsService.cpp  SelectionStemsService.h  StemCache.cpp  StemCache.h  StemPlaybackRouter.cpp  StemPlaybackRouter.h  StemSepSotaService.h  StemSeparator.cpp  StemSeparator.h  (+8 more)
src/models/: AmazonMusicModels.h  AppleMusicModels.h  AutomationPoint.h  BeatGrid.h  BeatportModels.h  BillboardModels.h  ControllerProfile.h  CuePoint.h  DJProfile.h  DJSoftwareTrack.h  EventPlan.h  ExportHistory.h  HandoverPoint.h  LicenseInfo.h  MIDIMapping.h  NetworkModels.h  PioneerTrack.h  PlatformVDJTrack.h  Playlist.h  PlaylistTrack.h  RecommendationResult.h  RekordboxTrack.h  SearchResult.h  SeratoTrack.h  SetPlan.h  SmartPlaylistRule.h  SoireePhase.h  SoundCloudModels.h  SpectrumData.h  SpotifyModels.h  StemData.h  StreamingTrack.h  TagModels.h  TidalModels.h  Track.h  TrackAnalysis.h  TrackFeatures.h  TraktorTrack.h  VirtualDJTrack.h  WaveformData.h  (+1 more)
src/services/: NowPlayingService.cpp  NowPlayingService.h  NowPlayingThrottleService.cpp  NowPlayingThrottleService.h
src/ui/: IRetranslatable.h  MainWindow.cpp  MainWindow.h
tools/: ClapProbe.cpp  LicenseManager.cpp
(+730 files in other folders)
